--- a/backend/templates/room.html
+++ b/backend/templates/room.html
@@ -5,7 +5,7 @@
   <title>{{ title }}</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="/static/style.css" />
-  <link rel="stylesheet" href="/static/style-additions.css? />
+  <link rel="stylesheet" href="/static/style-additions.css?v=20251019" />
   />
   <style>
     /* --- Page layout polish --- */
